# Pressr

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
crates/pressr-cli/: Cargo.toml
crates/pressr-cli/src/: data.rs  error.rs  main.rs  report.rs  runner.rs
crates/pressr-core/: Cargo.toml
crates/pressr-core/src/: data.rs  error.rs  lib.rs  report.rs  result.rs  runner.rs
crates/pressr-core/templates/: report.html
crates/pressr-gui/: .gitignore  package.json
crates/pressr-gui/src/: App.css  App.tsx
crates/pressr-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/pressr-gui/src-tauri/src/: lib.rs  main.rs
examples/: test-data.json
examples/reports/: example_report.html
