[workspace]
members = [
    "crates/pressr-cli",
    "crates/pressr-core",
    "crates/pressr-gui/src-tauri",
]
resolver = "2"

# Optional: Define default settings for all workspace members
# [workspace.package]
# version = "0.1.0"
# edition = "2021"
# license = "MIT OR Apache-2.0" # Example: Choose your license

# Optional: Define shared dependencies for all workspace members
# [workspace.dependencies]
# some_dependency = "1.0" 