[package]
name = "pressr-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
pressr-core = { path = "../pressr-core" }

# External dependencies
clap = { version = "4.5.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
