[package]
name = "pressr-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core library for the pressr load testing tool"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.36", features = ["rt", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
futures = "0.3"
tracing = "0.1"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
maud = "0.25"
hdrhistogram = "7.5"

[dev-dependencies]
tokio-test = "0.4" 